iuploader websites connected link

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           <div class="project-detail">
             <h2 class="fav-color">Image Uploader</h2>
             <p>Store and save your images online with ease using image uploader websites, offering secure and convenient storage options.</p>
-            <a href="http://iemail.42web.io" target="_blank" class="project-btn">Open Project <span
+            <a href="http://iuploader.vercel.app" target="_blank" class="project-btn">Open Project <span
                 style="font-size: 20px;">&#187;</span></a>
 
           </div>
@@ -419,5 +419,4 @@
     loop: true,
   })
 </script>
-
 </html>
